fixed title length truncating

--- a/script_conversion/css/main.css
+++ b/script_conversion/css/main.css
@@ -281,6 +281,7 @@ input:focus, input:active {
 
 .title-text {
     margin-left: 16px;
+    width: 100%;
 }
 
 .script-toolbar:hover .script-delete {
